# cpp_utils

./: .clang-format  .compile_commands_linux.json  .compile_commands_win32.json  .gitignore  CMakeLists.txt  README.md
cmake/: cxx_flags_setup.cmake  get_compiler_info.cmake
docs/: random_list.txt  tidy_command.txt
src/: natcmp.h  quickrng.h  tests.cpp  timer.h  utf8conv_win32.h
src/image/: helpers.h  image.h  jpeg.h  pixels.h  tiff.h
src/utils/: image.h  image.hpp  natcmp.h  natcmp.hpp  pixels.h  pixels.hpp  quickrng.h  quickrng.hpp  system.h  system.hpp  timer.h  timer.hpp  utf8conv_win32.h  utf8conv_win32.hpp
src/utils/image_wrappers/: jpeg.hpp  tiff.hpp
